fix logo and disabled translate z on mobile

--- a/static/style/master.css
+++ b/static/style/master.css
@@ -4287,10 +4287,12 @@ h6 {
 .project-img-depth img:nth-child(2) {
   position: absolute;
   top: 0;
-  left: 0;
-  -webkit-transform: scale(0.775) translateZ(150px);
-  -moz-transform: scale(0.775) translateZ(150px);
-  transform: scale(0.775) translateZ(150px); }
+  left: 0; }
+  @media (min-width: 576px) {
+    .project-img-depth img:nth-child(2) {
+      -webkit-transform: scale(0.775) translateZ(150px);
+      -moz-transform: scale(0.775) translateZ(150px);
+      transform: scale(0.775) translateZ(150px); } }
 
 .badge {
   height: 24px;
