--- a/static/style/scss/style.scss
+++ b/static/style/scss/style.scss
@@ -132,10 +132,13 @@
 .project-img-depth img:nth-child(2) {
     position: absolute;
     top: 0;
-    left: 0;
-    -webkit-transform: scale(.775) translateZ(150px);
-    -moz-transform: scale(.775) translateZ(150px);
-    transform: scale(.775) translateZ(150px)
+	left: 0;
+	@media (min-width: 576px) {
+		-webkit-transform: scale(.775) translateZ(150px);
+		-moz-transform: scale(.775) translateZ(150px);
+		transform: scale(.775) translateZ(150px);
+	}
+    
 }
 
 .badge {
